--- a/About caLAB.2.20.html
+++ b/About caLAB.2.20.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Aliquot Naming Conventions</title>
+    <title>Working With a caLAB Workflow</title>
     <link rel="StyleSheet" href="css/About%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,21 +28,21 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1086997">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.14.html#1086997">Managing caLAB Inventory</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.17.html#1086997">Manage Aliquots</a> &gt; Aliquot Naming Conventions</div>
+      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1108679">Getting Started with caLAB  1.0</a> &gt; Working With a caLAB Workflow</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading3"><a name="1086997">Aliquot Naming Conventions</a></div>
-      <div class="Body_Text"><a name="1078124">&nbsp;</a></div>
-      <div class="Body_Text"><a name="1089195">In caLAB, aliquots are named automatically when they are created, using the following </a>convention: <span style="font-style: italic;">prefix (NCL)-sequence # -lot ID</span>. <span style="font-style: italic;">Example:</span> NCL-8-4-3. The first portion of the name indicates the sample from which the aliquot is created (NCL-8). The second portion of the name indicates the aliquot number from that sample (NCL-8-4 [#4 aliquot from sample NCL-8]). If you create an aliquot from an existing aliquot, the third portion of the name indicates the aliquot number from that aliquot (NCL-8-4-3, [aliquot #3 created from aliquot #4 created from sample NCL-8]). If you create more than one aliquot from the same sample, they are numbered consecutively as in NCL-8-1, NCL-8-2, NCL-8-3, etc.</div>
-      <div class="Related_topics"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.18.html#1097882', '');" name="1090002">Creating A New Aliquot</a></span></div>
-      <div class="Related_topics"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.19.html#1078187', '');" name="1090021">Editing an Aliquot</a></span></div>
-      <div class="Related_topics"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.21.html#1077662', '');" name="1090045">Viewing an Aliquot</a></span></div>
-      <div class="Related_topics"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.23.html#1073979', '');" name="1090058">Masking an Aliquot</a></span></div>
+      <div class="Heading1"><a name="1108679">Working With a caLAB Workflow</a></div>
+      <div class="Body_Text"><a name="1088883">For a review of caLAB functionality as it relates to a workflow, see </a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.8.html#1109271', '');">caLAB Functionality Overview</a></span>. Before you can execute a workflow in caLAB, you must create samples and aliquots. These tasks are described in <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.9.html#1108701', '');">Managing caLAB Inventory</a></span>. </div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
           //
           WWHClearRelatedTopics();
+
+          // Add related topics
+          //
+          WWHAddRelatedTopic("Workflow Overview", "caLAB_1.0_OH", "About%20caLAB.2.21.html#1109856");
+          WWHAddRelatedTopic("Executing a caLAB Workflow", "caLAB_1.0_OH", "About%20caLAB.2.22.html#1109905");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
