--- a/About caLAB.2.28.html
+++ b/About caLAB.2.28.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Downloading Files</title>
+    <title>Working with Files</title>
     <link rel="StyleSheet" href="css/About%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,85 +28,54 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1085617">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.24.html#1085617">Working with Files</a> &gt; Downloading Files</div>
+      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1071795">Getting Started with caLAB  1.0</a> &gt; Working with Files</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading2"><a name="1085617">Downloading Files</a></div>
-      <div class="Body_Text"><a name="1085618">Once a file has been uploaded into caLAB, it can also be downloaded. </a></div>
-      <div class="Body_Text"><a name="1085688">To download a file, follow these steps:</a></div>
-      <div class="Numbered_List_1_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1085697">
+      <div class="Heading1"><a name="1071795">W</a>orking with Files</div>
+      <div class="Body_Text"><a name="1086982">Within a workflow, when you click consecutively on (+) symbols to open an assay and </a>an associated run, if the <span style="font-weight: bold;">In</span> or <span style="font-weight: bold;">Out</span> folder for the run has a (+) symbol, it is populated with either aliquots or files or both. Click the <span style="font-weight: bold;">In</span> or <span style="font-weight: bold;">Out</span> text itself. At that point, several hypertext links become available in the right-hand pane. Some of these links govern work with files in caLAB. </div>
+      <div class="Body_Text"><a name="1087297">By using these links, you can:  </a></div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1087289">
           <tr style="vertical-align: baseline;">
             <td>
-              <div class="Numbered_List_1_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">1.	</span>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
               </div>
             </td>
             <td width="100%">
-              <div class="Numbered_List_1_inner"><a name="1085697">In the workflow tree, locate the run that has the file(s) you want to download. </a>Click the (+) symbol in front of the run, expanding the folder to show the <span style="font-weight: bold;">In</span> and <span style="font-weight: bold;">Out</span> folders. </div>
+              <div class="Bullet_inner"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.29.html#1086942', '');" name="1087289">Upload input and output files</a></div>
             </td>
           </tr>
         </table>
       </div>
-      <div class="Numbered_List_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1085701">
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1087290">
           <tr style="vertical-align: baseline;">
             <td>
-              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">2.	</span>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
               </div>
             </td>
             <td width="100%">
-              <div class="Numbered_List_inner"><a name="1085701">Open the folders to identify the file(s) to be downloaded.</a></div>
+              <div class="Bullet_inner"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.32.html#1085617', '');" name="1087290">Download any files you have uploaded</a></div>
             </td>
           </tr>
         </table>
       </div>
-      <div class="Numbered_List_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1085710">
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1087291">
           <tr style="vertical-align: baseline;">
             <td>
-              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">3.	</span>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
               </div>
             </td>
             <td width="100%">
-              <div class="Numbered_List_inner"><a name="1085710">Click the </a><span style="font-weight: bold;">Download Files</span> hypertext link in the right pane of the browser. The browser displays all uploaded files in the folder.</div>
+              <div class="Bullet_inner"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.31.html#1078900', '');" name="1087291">Mask files</a></div>
             </td>
           </tr>
         </table>
       </div>
-      <div class="Numbered_List_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1085718">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">4.	</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Numbered_List_inner"><a name="1085718">Click the </a><span style="font-weight: bold;">Download</span> link corresponding to the file to be downloaded. (Or click <span style="font-weight: bold;">Download All Files </span>to download all files in the current folder).</div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Numbered_List_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1087645">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">5.	</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Numbered_List_inner"><a name="1087645">Navigate to the location where your downloaded file(s) will be saved. </a></div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Body_Text"><a name="1087635">If you select the option to download all files, your downloaded files will be zipped.</a></div>
-      <div class="Related_topics"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.25.html#1086942', '');" name="1090237">Uploading Input/Output Files</a></span></div>
-      <div class="Related_topics"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.27.html#1078900', '');" name="1090233">Masking a File</a></span></div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
