--- a/Searching caLAB.3.3.html
+++ b/Searching caLAB.3.3.html
@@ -32,8 +32,8 @@
     <hr align="left" />
     <blockquote>
       <div class="Heading2"><a name="1073772">	</a>			Searching a Workflow</div>
-      <div class="Body_Text"><a name="1072427">The Search Workflow feature in caLAB searches a workflow for Run information such </a>as a file, an aliquot, their status, etc. based on query input. </div>
-      <div class="Body_Text"><a name="1084959">To launch a search for one or more specific components in an assay, follow these </a>steps:</div>
+      <div class="Body_Text"><a name="1072427">The Search Workflow feature in caLAB searches a workflow for </a>assay run and associated aliquot information based on query input. </div>
+      <div class="Body_Text"><a name="1109964">T</a>o launch a search for one or more specific components in an assay, follow these steps:</div>
       <div class="Numbered_List_1_outer" style="margin-left: 18pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1079089">
           <tr style="vertical-align: baseline;">
@@ -62,7 +62,23 @@
           </tr>
         </table>
       </div>
-      <div class="Body_Text_Indent"><a name="1073413">When defining search criteria, there are no "required" fields. You can specify only </a>those parameters that you consider essential to the search.  If you click the <span style="font-weight: bold;">Search</span> button having defined no parameters, components of all of the caLAB runs will dis­play in the Search Results. </div>
+      <div class="Body_Text_Indent"><a name="1073413">When defining search criteria, there are no "required" fields. You can specify only </a>those parameters that you consider essential to the search.  </div>
+      <div class="Note_outer" style="margin-left: 50.25pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1109149">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Note_inner" style="width: 25px; white-space: nowrap;">
+                <span style="color: #000000; font-family: &quot;Palatino Linotype&quot;; font-size: 11.0pt; font-style: normal; font-variant: normal; font-weight: bold; left: -20px; position: relative; text-transform: none; top: 10px; vertical-align: baseline;">
+                  <img src="Lightbulb.gif" alt="*" id="bullet1109149" border="0" width="36" height="36" />
+                </span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Note_inner"><a name="1109149">I</a>f you click the <span style="font-weight: bold;">Search</span> button having defined no parameters, compo­nents of all of the caLAB runs will display in the Search Results. </div>
+            </td>
+          </tr>
+        </table>
+      </div>
       <table id="1072431" class="Table_-_Column_Header" style="padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; text-align: left;" cellspacing="1">
         <caption></caption>
         <tr>
