--- a/Submit to caLAB.4.2.html
+++ b/Submit to caLAB.4.2.html
@@ -32,9 +32,9 @@
     <hr align="left" />
     <blockquote>
       <div class="Heading1"><a name="1102895">Submitting Annotations for Nanoparticles</a></div>
-      <div class="Body_Text"><a name="1110444">A nanoparticle is defined as a small, stable particle, whose size is measured in </a>nanometers. These particles are used in biomedical applications in which they are utilized as drug carriers or imaging agents. Various targeting agents, such as antibodies, drugs, imaging agents, and reporters can be attached to the surface of a nanoparticle. </div>
+      <div class="Body_Text"><a name="1110444">A nanoparticle is defined as a small, stable particle, whose size is measured in </a>nanometers. These particles are used in biomedical applications in which they serve as drug carriers or imaging agents. Various targeting agents, such as antibodies, drugs, imaging agents, and reporters can be attached to the surface of a nanoparticle. </div>
       <div class="SideWords"><a name="1110425">Note:</a></div>
-      <div class="Body_Text"><a name="1105133">In caLAB, the term “sample” can refer to either of two entities: 1) A “Sample” is </a>identified by a vendor, a sample arrival date; this is the sample identified when creating an aliquot; and 2) a “Nanoparticle” sample is annotated with research and other characterization data. In this online help, the first sample is identified as Sample and the second sample is identified as Nanoparticle. This section describes the methods and fields for annotating nanoparticle [samples].</div>
+      <div class="Body_Text"><a name="1105133">In caLAB, the term “sample” can refer to either of two entities: 1) A “Sample” is </a>identified by a vendor, a sample arrival date; this is the sample identified when creating an aliquot; and 2) a “Nanoparticle” sample is annotated with research and other characterization data. In online help, the first sample is identified as Sample and the second sample is identified as Nanoparticle. This section describes the methods and fields for annotating nanoparticle [samples].</div>
       <div class="Body_Text"><a name="1110423">Nanoparticles are annotated in caLAB by recording research results that have been </a>obtained in a laboratory. </div>
       <div class="Body_Text"><a name="1105171">&nbsp;</a></div>
       <script type="text/javascript" language="JavaScript1.2">
