--- a/Submit to caLAB.4.4.html
+++ b/Submit to caLAB.4.4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>General Information</title>
+    <title>Nanoparticle General Information</title>
     <link rel="StyleSheet" href="css/Submit%20to%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,12 +28,13 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.1.html#1116422">Annotating Nanoparticles</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.2.html#1116422">Submitting Annotations for Nanoparticles</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.3.html#1116422">Annotating a Nanoparticle</a> &gt; General Information</div>
+      <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.1.html#1116422">Annotating Nanoparticles</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.2.html#1116422">Submitting Annotations for Nanoparticles</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.3.html#1116422">Annotating a Nanoparticle</a> &gt; Nanoparticle General Information</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading3"><a name="1116422">General Information</a></div>
+      <div class="Heading3"><a name="1116422">Nanoparticle General Information</a></div>
+      <div class="Body_Text"><a name="1124173">This page can be opened from two places in caLAB 1.0:</a></div>
       <div class="Numbered_List_1_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1102933">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1124178">
           <tr style="vertical-align: baseline;">
             <td>
               <div class="Numbered_List_1_inner" style="width: 18pt; white-space: nowrap;">
@@ -41,7 +42,21 @@
               </div>
             </td>
             <td width="100%">
-              <div class="Numbered_List_1_inner"><a name="1102933">On the Annotate Nanoparticle Home page, click the </a><span style="font-weight: bold;">Annotate a New </span><span style="font-weight: bold;">Nanoparticle</span> hypertext link.</div>
+              <div class="Numbered_List_1_inner"><a name="1124178">After you perform a nanoparticle search, on the Nanoparticle Search Results </a>page, click the hypertext Particle ID in the first column.</div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1102933">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">2.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1102933">On the Annotate Nanoparticle Home page, click the </a><span style="font-weight: bold;">Annotate a New Nanopar</span><span style="font-weight: bold;">­</span><span style="font-weight: bold;">ticle</span> hypertext link.</div>
             </td>
           </tr>
         </table>
@@ -51,7 +66,7 @@
           <tr style="vertical-align: baseline;">
             <td>
               <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">2.	</span>
+                <span class="Bold">3.	</span>
               </div>
             </td>
             <td width="100%">
@@ -85,7 +100,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.10.html#1103719', '');" name="1116594">Carbon Nanotube</a></span></div>
+                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.11.html#1103719', '');" name="1116594">Carbon Nanotube</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -99,7 +114,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.11.html#1103720', '');" name="1116598">Complex Particle</a></span></div>
+                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.12.html#1103720', '');" name="1116598">Complex Particle</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -113,7 +128,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.12.html#1104217', '');" name="1116602">Dendrimer</a></span></div>
+                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.13.html#1104217', '');" name="1116602">Dendrimer</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -127,7 +142,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.13.html#1103722', '');" name="1116606">Emulsion</a></span></div>
+                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.14.html#1103722', '');" name="1116606">Emulsion</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -141,7 +156,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.14.html#1104350', '');" name="1116610">Fullerene</a></span></div>
+                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.15.html#1104350', '');" name="1116610">Fullerene</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -155,7 +170,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.15.html#1103724', '');" name="1116614">Liposome</a></span></div>
+                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.16.html#1103724', '');" name="1116614">Liposome</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -169,7 +184,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.16.html#1103957', '');" name="1116618">Metal Particle</a></span></div>
+                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.17.html#1103957', '');" name="1116618">Metal Particle</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -183,7 +198,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.17.html#1104555', '');" name="1116622">Polymer</a></span></div>
+                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.18.html#1104555', '');" name="1116622">Polymer</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -197,7 +212,7 @@
                     </div>
                   </td>
                   <td width="100%">
-                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.18.html#1103743', '');" name="1116587">Quantum Dot</a></span></div>
+                    <div class="Table_Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.19.html#1103743', '');" name="1116587">Quantum Dot</a></span></div>
                   </td>
                 </tr>
               </table>
@@ -230,7 +245,7 @@
           <td id="tc1116926" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
             <div class="Table_Text"><a name="1116900">Visibility, set by the person who enters the annotation </a>information, determines access to the annotations for the selected particle ID. (Groups listed are user groups which have submitted data for the nanotechnology database.) Select one or more groups you wish to have access to the annotations you are defining.</div>
             <div class="Table_Text"><a name="1116919">&nbsp;</a></div>
-            <div class="Table_Text"><span style="font-weight: bold;"><a name="1116926">Note:</a></span> You have an opportunity to set visibility again for an associated file when you upload a characterization file. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.19.html#1103003', '');">Loading Characterization Files</a></span>.</div>
+            <div class="Table_Text"><span style="font-weight: bold;"><a name="1116926">Note:</a></span> You have an opportunity to set visibility again for an associated file when you upload a characterization file. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.20.html#1103003', '');">Loading Characterization Files</a></span>.</div>
           </td>
         </tr>
       </table>
@@ -239,7 +254,7 @@
           <tr style="vertical-align: baseline;">
             <td>
               <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">3.	</span>
+                <span class="Bold">4.	</span>
               </div>
             </td>
             <td width="100%">
