--- a/Submit to caLAB.4.9.html
+++ b/Submit to caLAB.4.9.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Composition</title>
+    <title>Physical Characterization</title>
     <link rel="StyleSheet" href="css/Submit%20to%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,21 +28,126 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.1.html#1103655">Annotating Nanoparticles</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.7.html#1103655">Nanoparticle Characterization</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.8.html#1103655">Physical Characterization</a> &gt; Composition</div>
+      <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.1.html#1103338">Annotating Nanoparticles</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.8.html#1103338">Nanoparticle Characterization</a> &gt; Physical Characterization</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading3"><a name="1103655">Composition</a></div>
-      <div class="Body_Text"><a name="1102968">Click the </a><span style="font-weight: bold;">Composition</span> menu tab to enter nanoparticle composition annotations. Characterization by composition is customized for each type of nanoparticle. (Only the Composition form varies from nanoparticle to nanoparticle.) Because you have already selected particle type on the General Information page (see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.2.html#1102895', '');">Submitting Annotations for Nanoparticles</a></span>), the form that opens when you click the <span style="font-weight: bold;">Composition</span> link will already be customized for your particle type. </div>
-      <div class="Body_Text"><a name="1109402">Follow the appropriate links for more information about entering composition </a>information for your nanparticle of interest. </div>
-      <div class="Body_Text"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.10.html#1103719', '');" name="1105412">Carbon Nanotube</a></span></div>
-      <div class="Body_Text"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.11.html#1103720', '');" name="1105417">Complex Particle</a></span></div>
-      <div class="Body_Text"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.12.html#1104217', '');" name="1105422">Dendrimer</a></span></div>
-      <div class="Body_Text"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.13.html#1103722', '');" name="1105427">Emulsion</a></span></div>
-      <div class="Body_Text"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.14.html#1104350', '');" name="1105432">Fullerene</a></span></div>
-      <div class="Body_Text"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.15.html#1103724', '');" name="1105437">Liposome</a></span></div>
-      <div class="Body_Text"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.16.html#1103957', '');" name="1105442">Metal Particle</a></span></div>
-      <div class="Body_Text"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.17.html#1104555', '');" name="1105460">Polymer</a></span></div>
-      <div class="Body_Text"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.18.html#1103743', '');" name="1105473">Quantum Dot</a></span></div>
+      <div class="Heading2"><a name="1103338">Physical Characterization</a></div>
+      <div class="Body_Text"><a name="1103344">Physical characterization refers to the determination of the material and structural </a>properties of a nanoparticle. For an overview about nanoparticle characterization, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.8.html#1117746', '');">Nanoparticle Characterization</a></span>.</div>
+      <div class="Body_Text"><a name="1108611">Click </a><span style="font-weight: bold;">Add</span> to the right of the <span style="font-weight: bold;">Physical Characterization</span> category on the Particle Tree. This opens a menu bar of a type with hypertext labels that you click to add corresponding information: </div>
+      <div class="Body_Text"><a name="1103708">The Physical Characterization subcategories on the page are links which you can click </a>to go to corresponding forms for annotating the selected particle.</div>
+      <div class="Body_Text"><a name="1108750">Click these hypertext links which take you to descriptions of the corresponding forms:</a></div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108751">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.10.html#1103655', '');" name="1108751">Composition</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108764">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.21.html#1114794', '');" name="1108764">Nanoparticle Size</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108794">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.22.html#1107103', '');" name="1108794">Nanoparticle Molecular Weight</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108825">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.23.html#1107104', '');" name="1108825">Nanoparticle Morphology</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108895">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.24.html#1107101', '');" name="1108895">Nanoparticle Shape</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108916">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.25.html#1104870', '');" name="1108916">Nanoparticle Surface</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108934">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.26.html#1104929', '');" name="1108934">Nanoparticle Solubility</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108952">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_inner"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.27.html#1104930', '');" name="1108952">Nanoparticle Purity</a></span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
