--- a/About caLAB.2.10.html
+++ b/About caLAB.2.10.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Executing a caLAB Workflow</title>
+    <title>Managing Samples</title>
     <link rel="StyleSheet" href="css/About%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,54 +28,20 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1089093">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.9.html#1089093">Working in caLAB</a> &gt; Executing a caLAB Workflow		</div>
+      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1108719">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.9.html#1108719">Managing caLAB Inventory</a> &gt; Managing Samples</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading2"><a name="1089093">Executing a caLAB Workflow</a>		</div>
-      <div class="Body_Text"><a name="1077088">To execute a workflow, select </a><span style="font-weight: bold;">Workflow &gt; Execute Workflow</span>. When you select this menu option, two hypertext links display that allow you to perform the following tasks:</div>
-      <div class="Bullet_outer" style="margin-left: 18pt;vertical-align: baseline;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097342">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;color: #000000; font-family: Arial; font-size: 11.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner" style="color: #000000; font-family: Arial; font-size: 11.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 11.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1097342">Create a New Assay Run</a></span></div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Bullet_outer" style="margin-left: 18pt;vertical-align: baseline;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097353">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;color: #000000; font-family: Arial; font-size: 11.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner" style="color: #000000; font-family: Arial; font-size: 11.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none;"><span style="color: #000000; font-family: Arial; font-size: 11.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1097353">Select an Existing Assay Run</a></span></div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Body_Text"><a name="1097348">Click either of these links to continue following your selected workflow.</a></div>
-      <div class="Body_Text"><a name="1086699">Working in a workflow consists of adding Assay Runs with associated aliquots and </a>input and output files. You can also add aliquots and files to existing runs. </div>
+      <div class="Heading2"><a name="1108719">Managing Samples</a></div>
+      <div class="Body_Text"><a name="1108720">Two options display when you select the </a><span style="font-weight: bold;">Inventory &gt; Manage Samples</span> menu option in caLAB. </div>
+      <div class="Run-In"><a name="1108721">Creating a New Sample</a></div>
+      <div class="Body_Text"><a name="1108722">This takes you to a form for entering information for a new </a>sample you want to submit. For more information, see <span class="Emphasis" style="color: #515186;">Creating a New Sample</span>.</div>
+      <div class="Run-In"><a name="1108726">Select an Existing Sample--</a></div>
+      <div class="Body_Text"><a name="1108727">This takes you to a form for launching a search for an </a>existing sample. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.5.html#1069067', '');">Searching Samples</a></span>.</div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
           //
           WWHClearRelatedTopics();
-
-          // Add related topics
-          //
-          WWHAddRelatedTopic("Navigation in caLAB", "caLAB_1.0_OH", "About%20caLAB.2.8.html#1069018");
-          WWHAddRelatedTopic("Creating an Assay Run", "caLAB_1.0_OH", "About%20caLAB.2.11.html#1097500");
-          WWHAddRelatedTopic("Creating a Run", "caLAB_1.0_OH", "About%20caLAB.2.12.html#1097554");
-          WWHAddRelatedTopic("Managing caLAB Inventory", "caLAB_1.0_OH", "About%20caLAB.2.14.html#1097378");
-          WWHAddRelatedTopic("Working with Files", "caLAB_1.0_OH", "About%20caLAB.2.24.html#1071795");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
