--- a/About caLAB.2.15.html
+++ b/About caLAB.2.15.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Managing Samples</title>
+    <title>Editing an Aliquot</title>
     <link rel="StyleSheet" href="css/About%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,15 +28,85 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1102471">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.14.html#1102471">Managing caLAB Inventory</a> &gt; Managing Samples</div>
+      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1108983">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.9.html#1108983">Managing caLAB Inventory</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.13.html#1108983">Manage Aliquots</a> &gt; Editing an Aliquot </div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading2"><a name="1102471">Managing Samples</a></div>
-      <div class="Body_Text"><a name="1098021">Two options display when you select the </a><span style="font-weight: bold;">Inventory &gt; Manage Samples</span> menu option in caLAB. </div>
-      <div class="Run-In"><a name="1098024">Creating a New Sample</a></div>
-      <div class="Body_Text"><a name="1102240">This takes you to a form for entering information for a new </a>sample you want to submit. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.16.html#1102173', '');">Creating a New Sample</a></span>.</div>
-      <div class="Run-In"><a name="1102172">Select an Existing Sample--</a></div>
-      <div class="Body_Text"><a name="1102233">This takes you to a form for launching a search for an </a>existing sample. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.5.html#1069067', '');">Searching Samples</a></span>.</div>
+      <div class="Heading3"><a name="1108983">Editing an Aliquot </a></div>
+      <div class="Body_Text"><a name="1108984">Editing an aliquot is part of the process of creating an aliquot. Editing can only be </a>performed before the aliquot is submitted to the database. </div>
+      <div class="Body_Text"><a name="1108985">To edit an aliquot, follow these steps:</a></div>
+      <div class="Numbered_List_1_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108988">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_1_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">1.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_1_inner"><a name="1108988">Complete the necessary steps for creating an aliquot, through step 3 in </a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.14.html#1108888', '');">Creating A New Aliquot</a></span>.</div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108990">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">2.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1108990">Click the </a><span style="font-weight: bold;">Update Aliquots</span> button before submitting the aliquot(s) to the caLAB database.</div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Body_Text_Indent_2"><a name="1108991">At this point, for each container you described in your entry, a box displays </a>naming the aliquot, (which has not yet been entered into the caLAB database). Aliquots are named automatically by caLAB. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.16.html#1109004', '');">Aliquot Naming Conventions</a></span>.</div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108995">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">3.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1108995">Click on the hypertext link in the box to open an Edit Aliquot page displaying the </a>corresponding details for the Aliquot. </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Body_Text_Indent_2"><a name="1108996">You can edit any aliquot information here. </a></div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108997">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">4.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1108997">Click </a><span style="font-weight: bold;">Submit</span> on this page, returning you to the Create Aliquot page where the edited information now displays in the individual aliquot boxes. </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1108998">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">5.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1108998">Click </a><span style="font-weight: bold;">Submit</span> on the Create Aliquot page to enter these aliquots, based on a particular Sample ID, into the caLAB database. A message verifies when the aliquots are successfully submitted into the database.</div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Body_Text"><a name="1108999">Once entered into the database, the aliquot can no longer be edited. An aliquot can be </a>masked, however. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.19.html#1109071', '');">Masking an Aliquot</a></span>. </div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
