--- a/About caLAB.2.17.html
+++ b/About caLAB.2.17.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Manage Aliquots</title>
+    <title>Viewing an Aliquot</title>
     <link rel="StyleSheet" href="css/About%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,20 +28,69 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1102254">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.14.html#1102254">Managing caLAB Inventory</a> &gt; Manage Aliquots</div>
+      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1109027">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.9.html#1109027">Managing caLAB Inventory</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.13.html#1109027">Manage Aliquots</a> &gt; Viewing an Aliquot</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading2"><a name="1102254">Manage Aliquots</a></div>
-      <div class="Body_Text"><a name="1102255">Two options display when you select the </a><span style="font-weight: bold;">Inventory &gt; Manage Aliquots</span> menu option in caLAB. </div>
-      <div class="Run-In"><a name="1102256">Creating a New Aliquot</a></div>
-      <div class="Body_Text"><a name="1102257">This takes you to a form for entering information for a new </a>sample you want to submit. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.18.html#1097882', '');">Creating A New Aliquot</a></span>.</div>
-      <div class="Run-In"><a name="1102261">Select an Existing Aliquot--</a></div>
-      <div class="Body_Text"><a name="1102251">This takes you to a form for launching a search for an </a>existing aliquot. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.7.html#1102511', '');">Searching Aliquots</a></span>. </div>
+      <div class="Heading3"><a name="1109027">Viewing an Aliquot</a></div>
+      <div class="Body_Text"><a name="1109029">Once an aliquot has been created and added to an Assay Run, you can view aliquot </a>details. To do so, follow these steps:</div>
+      <div class="Numbered_List_1_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1109030">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_1_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">1.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_1_inner"><a name="1109030">In the Run Tree, select a Run that you want to examine. </a></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1109031">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">2.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1109031">Click the (+) symbol in front of the </a><span style="font-weight: bold;">In</span> folder (an aliquot is always part of the input). </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Body_Text_Indent_2"><a name="1109032">If Aliquots have been added to the Run, they are listed in the </a><span style="font-weight: bold;">In</span> folder. </div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1109033">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">3.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1109033">Click on the Aliquot name to open the details page for the aliquot. </a></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Body_Text"><a name="1109034">From this page, you can mask the aliquot. </a></div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
           //
           WWHClearRelatedTopics();
+
+          // Add related topics
+          //
+          WWHAddRelatedTopic("Creating A New Aliquot", "caLAB_1.0_OH", "About%20caLAB.2.14.html#1108888");
+          WWHAddRelatedTopic("Editing an Aliquot", "caLAB_1.0_OH", "About%20caLAB.2.15.html#1108983");
+          WWHAddRelatedTopic("Aliquot Details Page", "caLAB_1.0_OH", "Searching%20caLAB.3.10.html#1105563");
+          WWHAddRelatedTopic("Using an Aliquot", "caLAB_1.0_OH", "About%20caLAB.2.18.html#1109062");
+          WWHAddRelatedTopic("Masking an Aliquot", "caLAB_1.0_OH", "About%20caLAB.2.19.html#1109071");
+          WWHAddRelatedTopic("Creating an Assay Run", "caLAB_1.0_OH", "About%20caLAB.2.23.html#1097500");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
