--- a/About caLAB.2.27.html
+++ b/About caLAB.2.27.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Masking a File</title>
+    <title>Assay Run In and Out Folders</title>
     <link rel="StyleSheet" href="css/About%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,59 +28,66 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1078900">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.24.html#1078900">Working with Files</a> &gt; Masking a File</div>
+      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1097561">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.20.html#1097561">Working With a caLAB Workflow</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.22.html#1097561">Executing a caLAB Workflow		</a> &gt; Assay Run In and Out Folders</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading2"><a name="1078900">Masking a File</a></div>
-      <div class="Body_Text"><a name="1083578">Once you have uploaded a file, it is listed in the </a><span style="font-weight: bold;">In</span> folder of a run, along with other input files you may have uploaded. In caLAB 1.0, you cannot delete uploaded files from the system, but you can mask them. As an example for doing so, perhaps you accidentally uploaded the wrong file for an assay, and you do not want it to be recognized as an active file in the assay.</div>
-      <div class="Body_Text"><a name="1083507">To mask a file, follow these steps:</a></div>
-      <div class="Numbered_List_1_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1083508">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Numbered_List_1_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">1.	</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Numbered_List_1_inner"><a name="1083508">Click on the (+) symbol to open the </a><span style="font-weight: bold;">In</span> folder. Each item listed in the folder has been assigned to the open Run. Each is a hyperlink that can open its corresponding details.</div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Numbered_List_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1083509">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">2.	</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Numbered_List_inner"><a name="1083509">Click the right-most link in the right pane of the caLAB browser, </a><span style="font-weight: bold;">Mask Files.</span></div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Body_Text_Indent_2"><a name="1083788">The browser displays in table format general information for the workflow, as </a>well as it lists the uploaded files.</div>
-      <div class="Numbered_List_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1083710">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
-                <span class="Bold">3.	</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Numbered_List_inner"><a name="1083710">In the Uploaded Input Files table, </a><span style="font-weight: bold;">Mask Action</span> column, click the <span style="font-weight: bold;">Mask</span> hyper­text link corresponding to the file to be masked. </div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Body_Text"><a name="1084726">Upon masking the file, it is still visible in the workflow tree, but its name has been </a>changed to itacilized font, indicating its masked status. You can still view the file details by clicking its name. The operating system loads the appropriate application for viewing the file.</div>
-      <div class="Related_topics"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.25.html#1086942', '');" name="1090259">Uploading Input/Output Files</a></span></div>
-      <div class="Related_topics"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.26.html#1085950', '');" name="1090266">caLAB File Naming Conventions</a></span></div>
-      <div class="Related_topics"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.28.html#1085617', '');" name="1090270">Downloading Files</a></span></div>
+      <div class="Heading3"><a name="1097561">Assay Run In and Out Folders</a></div>
+      <div class="Body_Text"><a name="1097563">Within a workflow, when you click consecutively on (+) symbols to open an assay and </a>an associated run, if the <span style="font-weight: bold;">In</span> or <span style="font-weight: bold;">Out</span> folder for the run has a (+) symbol, it is populated with either aliquots or input or output files or both. Click the <span style="font-weight: bold;">In</span> or <span style="font-weight: bold;">Out</span> text itself. At that point, several hypertext links become available in the right-hand pane. Click these hypertext links for information about each link. </div>
+      <table id="1097564" class="Table_-_Column_Header" style="padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; text-align: left;" cellspacing="1">
+        <caption></caption>
+        <tr>
+          <td id="tc1108119" style="background-color: Lavender; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: middle;">
+            <div class="Table_Header"><a name="1108119">Run Folder Links</a></div>
+          </td>
+          <td id="tc1108121" style="background-color: Lavender; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: middle;">
+            <div class="Table_Header"><a name="1108121">&nbsp;</a></div>
+          </td>
+          <td id="tc1108134" style="background-color: Lavender; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: middle;">
+            <div class="Table_Header"><a name="1108123">Upload Input </a>Files</div>
+            <div class="Table_Header"><a name="1108134">Upload Output </a>Files</div>
+          </td>
+          <td id="tc1108125" style="background-color: Lavender; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: middle;">
+            <div class="Table_Header"><a name="1108125">&nbsp;</a></div>
+          </td>
+          <td id="tc1108127" style="background-color: Lavender; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: middle;">
+            <div class="Table_Header"><a name="1108127">&nbsp;</a></div>
+          </td>
+        </tr>
+        <tr>
+          <td id="tc1097566" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text" style="font-family: Arial; font-size: 10.0pt; font-style: italic; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: italic; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1097566">In Folder Links</a></span></div>
+          </td>
+          <td id="tc1097569" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.16.html#1109007', '');" name="1097569">Use Aliquot</a></div>
+          </td>
+          <td id="tc1097572" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.29.html#1086942', '');" name="1097572">Upload Files</a></div>
+          </td>
+          <td id="tc1097575" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.32.html#1085617', '');" name="1097575">Download Files</a></div>
+          </td>
+          <td id="tc1097578" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.31.html#1078900', '');" name="1097578">Mask Files</a></div>
+          </td>
+        </tr>
+        <tr>
+          <td id="tc1097580" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text" style="font-family: Arial; font-size: 10.0pt; font-style: italic; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: italic; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1097580">Out Folder Links</a></span></div>
+          </td>
+          <td id="tc1097582" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text"><a name="1097582">N/A</a></div>
+          </td>
+          <td id="tc1097585" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.29.html#1086942', '');" name="1097585">Upload Files</a></div>
+          </td>
+          <td id="tc1097588" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.32.html#1085617', '');" name="1097588">Download Files</a></div>
+          </td>
+          <td id="tc1097591" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
+            <div class="Table_Text"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.31.html#1078900', '');" name="1097591">Mask Files</a></div>
+          </td>
+        </tr>
+      </table>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
