--- a/About caLAB.2.29.html
+++ b/About caLAB.2.29.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>About caLAB.2.29.html</title>
+    <title>Uploading Input/Output Files</title>
     <link rel="StyleSheet" href="css/About%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,11 +28,122 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1085607">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.24.html#1085607">Working with Files</a> &gt; </div>
+      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1086942">Getting Started with caLAB  1.0</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.28.html#1086942">Working with Files</a> &gt; Uploading Input/Output Files</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading2"><a name="1085607">&nbsp;</a></div>
-      <div class="Body_Text"><a name="1079086">&nbsp;</a></div>
+      <div class="Heading2"><a name="1086942">Uploading Input/Output Files</a></div>
+      <div class="Body_Text"><a name="1078684">After you have created an Assay Run, caLAB allows you to upload input or output files </a>of any type that are pertinent to the Assay Run. To do this, start with step 1 in this topic.</div>
+      <div class="Body_Text"><a name="1087357">You can also add files to an existing Run that is already populated with data. To do this, </a>start with step 4 in this topic. </div>
+      <div class="Body_Text" style="color: #000000; font-family: Arial; font-size: 11.0pt; font-style: italic; font-variant: normal; font-weight: normal; text-transform: none; vertical-align: baseline;"><span style="color: #000000; font-family: Arial; font-size: 11.0pt; font-style: italic; font-variant: normal; font-weight: normal; text-transform: none; vertical-align: baseline;"><a name="1082834">Examples:</a></span></div>
+      <div class="Run-In"><a name="1082843">Input files</a></div>
+      <div class="Body_Text"><a name="1082933">Instrument calibration data; paper describing a Sample in detail </a></div>
+      <div class="Run-In"><a name="1082946">Output files</a></div>
+      <div class="Body_Text"><a name="1082966">Laboratory results; analyses of laboratory results</a></div>
+      <div class="Body_Text"><a name="1082761">To upload one or more files, follow these steps:</a></div>
+      <div class="Numbered_List_1_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1078753">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_1_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">1.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_1_inner"><a name="1078753">Immediately after creating an Assay run (</a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.23.html#1097500', '');">Creating an Assay Run</a></span>), with an Assay Run selected in the Run Tree, click either the <span style="font-weight: bold;">Upload Input Files</span> or <span style="font-weight: bold;">Upload Output Files</span> hypertext link in the right-hand panel of the browser.</div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Body_Text_Indent"><a name="1089320">OR </a></div>
+      <div class="Body_Text_Indent_2"><a name="1082805">Select an existing Assay Run, click on the (+) symbols in front of the run, and </a>select the <span style="font-weight: bold;">In</span> or <span style="font-weight: bold;">Out</span> folder. Click the <span style="font-weight: bold;">Upload Files</span> hypertext link to add files to the existing run.</div>
+      <div class="Body_Text_Indent_2"><a name="1089329">This opens an applet where you can navigate to the file(s) to be uploaded. (You </a>are not limited as to file type you can upload.) </div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1082830">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">2.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1082830">Using conventional selection techniques, select the file(s) in the left panel and </a>move the file you select to right panel in the applet using the forward arrows (<span style="font-weight: bold;">&gt;&gt;</span>). (A message may open, indicating unacceptable characters for the file name.) Click <span style="font-weight: bold;">OK</span> to proceed.</div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1088195">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">3.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1088195">Click the </a><span style="font-weight: bold;">Upload Files</span> button, and click <span style="font-weight: bold;">OK</span> to confirm the upload. Files are uploaded in a zipped format. </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Body_Text_Indent_2"><a name="1088196">caLAB displays an Uploaded File Summary dialog box. </a></div>
+      <div class="Body_Text_Indent"><a name="1078761">The Upload File applet still displays in the caLAB browser. You can stipulate to </a>upload another file if you wish.</div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1078762">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">4.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1078762">Click </a><span style="font-weight: bold;">Done</span> to return to the original page showing Upload... hypertext links. </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Body_Text_Indent_2"><a name="1110623">I</a>n the Run Tree, the Run now displays folder icons labeled In and Out. Clicking either of these links opens a new set of hypertext links in the right-hand panel of the browser:</div>
+      <div class="Bullet_Indent_outer" style="margin-left: 36pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1078829">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_Indent_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">–</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_Indent_inner"><a name="1078829">Input: </a><span style="font-weight: bold;">Use Aliquot</span>, <span style="font-weight: bold;">Upload Files</span>, <span style="font-weight: bold;">Download Files</span>, and <span style="font-weight: bold;">Mask Aliquot</span>.</div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Bullet_Indent_outer" style="margin-left: 36pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1078845">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Bullet_Indent_inner" style="width: 18pt; white-space: nowrap;">
+                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">–</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Bullet_Indent_inner"><a name="1078845">Output: </a><span style="font-weight: bold;">Upload Files</span>, <span style="font-weight: bold;">Download Files</span>, and <span style="font-weight: bold;">Mask Aliquot</span></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="Numbered_List_outer" style="margin-left: 18pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1085941">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Numbered_List_inner" style="width: 18pt; white-space: nowrap;">
+                <span class="Bold">5.	</span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Numbered_List_inner"><a name="1085941">To view a list of files uploaded into an Assay Run, click the </a><span style="font-weight: bold;">Download Files</span> but­ton.<span class="Red"> </span>This opens a table displaying the Uploaded Input Files, with their caLAB-designated file name. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.30.html#1085950', '');">caLAB File Naming Conven­tions</a></span>.</div>
+            </td>
+          </tr>
+        </table>
+      </div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
