--- a/About caLAB.2.4.html
+++ b/About caLAB.2.4.html
@@ -46,17 +46,18 @@
           </tr>
         </table>
       </div>
-      <div class="SideWords"><a name="1097288">&nbsp;</a></div>
       <div class="Note_outer" style="margin-left: 50.25pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097306">
           <tr style="vertical-align: baseline;">
             <td>
               <div class="Note_inner" style="width: 25px; white-space: nowrap;">
-                <img src="Lightbulb.gif" alt="*" id="bullet1097306" border="0" width="36" height="36" />
+                <span style="color: #000000; font-family: &quot;Palatino Linotype&quot;; font-size: 11.0pt; font-style: normal; font-variant: normal; font-weight: bold; left: -20px; position: relative; text-transform: none; top: 10px; vertical-align: baseline;">
+                  <img src="Lightbulb.gif" alt="*" id="bullet1097306" border="0" width="36" height="36" />
+                </span>
               </div>
             </td>
             <td width="100%">
-              <div class="Note_inner"><a name="1097306">When you register as a new user, you are assigned a temporary pass</a>­word by the administrator. The first time you log in after receiving your account, the Update Password dialog box opens automatically, allowing you to reset your password. At any time, from the login page, you can reconfigure your password by clicking the <span style="font-weight: bold;">Update Password</span> button. Enter the appropriate information on the form, and click Update. To clear the form, click the <span style="font-weight: bold;">Reset</span> button. </div>
+              <div class="Note_inner"><a name="1097306">When you register as a new user, you are assigned a temporary pass</a>­word by the administrator. The first time you log in after receiving your account, the Update Password dialog box opens automatically, allowing you to reset your password. At any time, from the login page, you can reconfigure your password by clicking the <span style="font-weight: bold;">Update Password</span> button. Enter the appropriate information on the form, and click <span style="font-weight: bold;">Update</span>. To clear the form, click the <span style="font-weight: bold;">Reset</span> button. </div>
             </td>
           </tr>
         </table>
@@ -70,7 +71,7 @@
               </div>
             </td>
             <td width="100%">
-              <div class="Numbered_List_inner"><a name="1097238">Click login to enter caLAB.</a></div>
+              <div class="Numbered_List_inner"><a name="1097238">Click </a><span style="font-weight: bold;">Login</span> to enter caLAB.</div>
             </td>
           </tr>
         </table>
