--- a/About caLAB.2.7.html
+++ b/About caLAB.2.7.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Using CGEMS Online Help</title>
+    <title>Navigation in caLAB</title>
     <link rel="StyleSheet" href="css/About%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,139 +28,14 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1097025">Getting Started with caLAB  1.0</a> &gt; Using CGEMS Online Help</div>
+      <a class="WebWorks_Breadcrumb_Link" href="About%20caLAB.2.1.html#1069018">Getting Started with caLAB  1.0</a> &gt; Navigation in caLAB</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading1"><a name="1097025">Using CGEMS Online Help</a></div>
-      <div class="Body_Text"><a name="1097029">The online help explains how to use all of the features of the CGEMS portal.</a></div>
-      <div class="Body_Text"><a name="1097033">To access online help in CGEMS, use any of the following methods:</a></div>
-      <div class="Bullet_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097034">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner"><a name="1097034">Click the </a><span style="font-weight: bold;">Help</span> menu option by the <span style="font-weight: bold;">Login</span> button or on the top menu bar to open the complete online help project.</div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Note_outer" style="margin-left: 50.25pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097038">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Note_inner" style="width: 25px; white-space: nowrap;">
-                <img src="Lightbulb.gif" alt="*" id="bullet1097038" border="0" width="36" height="36" />
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Note_inner"><a name="1097038">You can access online help without being logged into </a><span style="font-family: Arial;">CGEMS</span>.</div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Bullet_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097039">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner"><a name="1097039">Click the </a><span style="font-weight: bold;">Help</span> icon or button at the top of each page to open a context-sensitive topic. Context-sensitive help displays information that corresponds to the page from which help was opened. </div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Body_Text"><a name="1097040">Once you are in online help, several options help you locate topics of interest.</a></div>
-      <div class="Bullet_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097044">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner"><a name="1097044">Click the </a><span style="font-weight: bold;">Show in Contents</span> button (<img id="1097042" class="Default" src="images/About%20caLAB.2.7.1.jpg" width="21" height="21" style="display: inline; float: none; left: 0.0; text-align: left; top: 0.0;" />) at the top left of the help page to open the complete online help table of contents and locate your current topic in the table.</div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Bullet_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097045">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner"><a name="1097045">The breadcrumb trail at the top of the page shows the relative location of the </a>current help topic relative to neighboring topics. Click a breadcrumb link to display that help topic.</div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Bullet_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097047">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner"><a name="1097047">Follow hypertext links or the </a><span style="font-weight: bold;">Related Topics</span> buttons in the help topics to open other closely related topics. If the current help page has related topics associated with it, you can also view them by clicking the <span style="font-weight: bold;">Related Topics</span> button (<img id="1097049" class="Default" src="images/About%20caLAB.2.7.2.jpg" width="24" height="21" style="display: inline; float: none; left: 0.0; text-align: left; top: 0.0;" />) at the top right of the help page.</div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Bullet_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097051">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner"><a name="1097051">Locate topics using the table of contents that displays in the left pane of the </a>online help project or the <span style="font-weight: bold;">Index</span> tab that displays at the top of the Table of Contents pane.</div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Bullet_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097052">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner"><a name="1097052">Perform word searches of Help by entering query text in the search text box.</a></div>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="Bullet_outer" style="margin-left: 18pt;">
-        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1097056">
-          <tr style="vertical-align: baseline;">
-            <td>
-              <div class="Bullet_inner" style="width: 18pt; white-space: nowrap;">
-                <span style="color: Black; font-size: 12pt; font-style: normal; font-variant: normal; font-weight: normal;">•</span>
-              </div>
-            </td>
-            <td width="100%">
-              <div class="Bullet_inner"><a name="1097056">Print the current topic by clicking the </a><span style="font-weight: bold;">Print</span> button (<img id="1097054" class="Default" src="images/About%20caLAB.2.7.3.jpg" width="23" height="20" style="display: inline; float: none; left: 0.0; text-align: left; top: 0.0;" />) at the top right of the help page.</div>
-            </td>
-          </tr>
-        </table>
-      </div>
+      <div class="Heading1"><a name="1069018">Navigation in caLAB</a></div>
+      <div class="Body_Text"><a name="1080111">After clicking menu options across the top of the caLAB browser window, the </a>application advances to corresponding pages. Additionally, after you have executed a workflow (under the <span style="font-weight: bold;">Workflow</span> menu option), the associated Assay Runs display as a Run Tree in the left panel of the browser.</div>
+      <div class="Body_Text"><a name="1080116">The </a>caLAB workflow displays four assay types: <span style="font-weight: bold;">Pr</span><span style="font-weight: bold;">e-screening</span>, <span style="font-weight: bold;">Ph</span><span style="font-weight: bold;">ysical</span>, <span style="font-weight: bold;">In</span><span style="font-weight: bold;"> vitro</span>, and <span style="font-weight: bold;">In</span><span style="font-weight: bold;"> vivo</span>.   Each item in the workflow for which information currently exists is preceded by a (+) and a “folder” icon. (Items with no current information display a “piece of paper” icon. Click on the (+) icon to expand the folders.</div>
+      <div class="Body_Text"><a name="1088589">Many text items in caLAB are hypertext links that you can click to open detail pages, </a>dialog boxes, or browser windows with more hypertext links for accessing features. Most pages also display <span style="font-weight: bold;">Help</span> buttons that you can click to open page sensitive online help. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.6.html#1109917', '');">Using caLAB Online Help</a></span>.</div>
+      <div class="Body_Text"><a name="1088894">For more information about working with a workflow, see </a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.22.html#1109905', '');">Executing a caLAB Workflow</a></span>.</div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
