--- a/Searching caLAB.3.2.html
+++ b/Searching caLAB.3.2.html
@@ -32,16 +32,19 @@
     <hr align="left" />
     <blockquote>
       <div class="Heading1"><a name="1085607">Launching a caLAB Search</a></div>
-      <div class="Body_Text"><a name="1103589">The caLAB 1.0 allows you to perform the following searches:</a></div>
-      <div class="Run-In"><a name="1103590">Workflow Search</a></div>
-      <div class="Body_Text"><a name="1103593">A Workflow Search looks for Run information such as a file, an </a>aliquot, etc. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.3.html#1073772', '');">Searching a Workflow</a></span> </div>
+      <div class="Body_Text"><a name="1108762">Access to features and objects in caLAB is dependent upon the permissions assigned </a>registered users. The caLAB 1.0 allows you, with exceptions based on your privileges, to perform the following searches:</div>
+      <div class="Run-In"><a name="1108774">Run Search</a></div>
+      <div class="Body_Text"><a name="1108788">A Run Search, to identify Runs that can be included in a Workflow, is </a>part of executing a Workflow. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.24.html#1104001', '');">Searching Runs</a></span>.</div>
+      <div class="Run-In"><a name="1108763">W</a>orkflow Search</div>
+      <div class="Body_Text"><a name="1108764">A Workflow Search looks for Run information such as a file, an </a>aliquot, etc. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.3.html#1073772', '');">Searching a Workflow</a></span> </div>
       <div class="Run-In"><a name="1103550">Sample Search</a></div>
       <div class="Body_Text"><a name="1103594">A Sample Search looks for samples that may be recorded in caLAB. </a>Samples are identified by source vendors, date of receipt, storage location, etc. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.5.html#1069067', '');">Searching Samples</a></span>.</div>
-      <div class="Run-In"><a name="1103551">Aiquot Search</a></div>
-      <div class="Body_Text"><a name="1103595">An Aliquot Search looks for aliquots, identified by the source from </a>which the aliquot is derived, the name of the person who submitted the aliquot, storage location, etc. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.7.html#1102511', '');">Searching Aliquots</a></span>.</div>
+      <div class="Run-In"><a name="1103551">Aliquot Search</a></div>
+      <div class="Body_Text"><a name="1103595">An Aliquot Search looks for aliquots, identified by the source from </a>which the aliquot is derived, the name of the person who submitted the aliquot, storage location, etc. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.8.html#1102511', '');">Searching Aliquots</a></span>.</div>
       <div class="Run-In"><a name="1103569">Nanoparticle Search</a></div>
-      <div class="Body_Text"><a name="1103596">A Nanoparticle search looks for a nanoparticle based on </a>annotations that have been added such as characterization information. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.9.html#1102681', '');">Searching Nanoparticles</a></span></div>
-      <div class="Body_Text"><a name="1103584">To initiate a search, use the </a><span style="font-weight: bold;">Search</span> menu option. </div>
+      <div class="Body_Text"><a name="1103596">A Nanoparticle search looks for a nanoparticle based on </a>annotations that have been added such as characterization information. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.11.html#1102681', '');">Searching Nanoparticles</a></span></div>
+      <div class="Run-In"><a name="1105250">Reports Searc</a>h</div>
+      <div class="Body_Text"><a name="1105251">A Reports search looks for submitted reports associated with </a>multiple nanoparticles. This feature is accessible even to users for whom access to nanoparticles in caLAB is restricted. See <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.14.html#1108898', '');">Searching Reports</a></span>.</div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
