--- a/Searching caLAB.3.5.html
+++ b/Searching caLAB.3.5.html
@@ -28,13 +28,12 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="Searching%20caLAB.3.1.html#1069067">Searching the caLAB  Database</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Searching%20caLAB.3.2.html#1069067">Launching a caLAB Search</a> &gt; 		Searching Samples </div>
+      <a class="WebWorks_Breadcrumb_Link" href="Searching%20caLAB.3.1.html#1069067">Searching the caLAB  Database</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Searching%20caLAB.3.2.html#1069067">Launching a caLAB Search</a> &gt; 		Searching Samples</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading2"><a name="1069067">	</a>	Searching Samples </div>
-      <div class="SideWords"><a name="1103851">Note:</a></div>
-      <div class="Body_Text"><a name="1073883">In the conventional sense, the term “sample” can refer to either of two entities in </a>caLAB: 1) A “Sample” is identified by a vendor, a sample accession date, etc; this is the sample (identified when creating an aliquot) whose search this topic describes; and 2) a “Nanoparticle” sample is annotated with research and other characterization data. In caLAB and in this online help, the first sample is identified as Sample and the second sample is identified as Nanoparticle. This topic describes performing a search for a “Sample”.</div>
-      <div class="Body_Text"><a name="1103849">To launch a search for a specific sample, follow these steps:</a></div>
+      <div class="Heading2"><a name="1069067">	</a>	Searching Samples</div>
+      <div class="Body_Text"><a name="1110059">In the conventional sense, the term “sample” can refer to either of two entities in </a>caLAB. For more information, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'About%20caLAB.2.11.html#1108732', '');">caLAB Sample Overview</a></span>.  This topic describes performing a search for a “Sample”. For information about searching for “Nanoparticles”, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.11.html#1102681', '');">Searching Nanoparticles</a></span>.</div>
+      <div class="Body_Text"><a name="1103849">T</a>o launch a search for a specific sample, follow these steps:</div>
       <div class="Numbered_List_1_outer" style="margin-left: 18pt;">
         <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1085388">
           <tr style="vertical-align: baseline;">
@@ -63,7 +62,23 @@
           </tr>
         </table>
       </div>
-      <div class="Body_Text"><a name="1073805">When defining search criteria, there are no "required" fields. You can add only those </a>parameters that you consider essential to the search.  If you click the <span style="font-weight: bold;">Search</span> button having defined no parameters, all of the caLAB sample will be listed in the Search Results.</div>
+      <div class="Body_Text"><a name="1073805">When defining search criteria, there are no "required" fields. You can add only those </a>parameters that you consider essential to the search.  </div>
+      <div class="Note_outer" style="margin-left: 50.25pt;">
+        <table border="0" cellspacing="0" cellpadding="0" id="SummaryNotRequired_np1109153">
+          <tr style="vertical-align: baseline;">
+            <td>
+              <div class="Note_inner" style="width: 25px; white-space: nowrap;">
+                <span style="color: #000000; font-family: &quot;Palatino Linotype&quot;; font-size: 11.0pt; font-style: normal; font-variant: normal; font-weight: bold; left: -20px; position: relative; text-transform: none; top: 10px; vertical-align: baseline;">
+                  <img src="Lightbulb.gif" alt="*" id="bullet1109153" border="0" width="36" height="36" />
+                </span>
+              </div>
+            </td>
+            <td width="100%">
+              <div class="Note_inner"><a name="1109153">I</a>f you click the <span style="font-weight: bold;">Search</span> button having defined no parameters, all of the caLAB samples will be listed in the Search Results.</div>
+            </td>
+          </tr>
+        </table>
+      </div>
       <table id="1073809" class="Table_-_Column_Header" style="padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; text-align: left;" cellspacing="1">
         <caption></caption>
         <tr>
@@ -79,7 +94,7 @@
             <div class="Table_Text" style="font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1073815">Sample ID</a></span></div>
           </td>
           <td id="tc1073817" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
-            <div class="Table_Text"><a name="1073817">Enter the fully qualified name of the Sample or Aliquot </a>to be searched. Add an asterisk for a wild-card search.<span style="font-size: 7.0pt;"> </span></div>
+            <div class="Table_Text"><a name="1073817">Enter the fully qualified name of the Sample</a> to be searched. Add an asterisk for a wild-card search.<span style="font-size: 7.0pt;"> </span></div>
           </td>
         </tr>
         <tr>
@@ -111,7 +126,7 @@
             <div class="Table_Text" style="font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><span style="color: #000000; font-family: Arial; font-size: 10.0pt; font-style: normal; font-variant: normal; font-weight: bold; text-transform: none; vertical-align: baseline;"><a name="1073835">Date Accessioned  </a></span></div>
           </td>
           <td id="tc1073837" style="background-color: White; border-bottom-color: Black; border-bottom-style: solid; border-bottom-width: 1px; border-left-color: Black; border-left-style: solid; border-left-width: 1px; border-right-color: Black; border-right-style: solid; border-right-width: 1px; border-top-color: Black; border-top-style: solid; border-top-width: 1px; padding-bottom: pt; padding-left: pt; padding-right: pt; padding-top: pt; vertical-align: top;">
-            <div class="Table_Text"><a name="1073837">Click the two calendars to define the range of dates </a>during which the all samples were accessioned in the lab.</div>
+            <div class="Table_Text"><a name="1073837">Click the two calendars to define the range of dates </a>during which the samples were accessioned in the lab.</div>
           </td>
         </tr>
         <tr>
@@ -145,12 +160,16 @@
           </tr>
         </table>
       </div>
-      <div class="Body_Text_Indent"><a name="1086661">For information about search results, see </a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Searching%20caLAB.3.6.html#1085437', '');">Sample Search Results</a></span>.</div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
           //
           WWHClearRelatedTopics();
+
+          // Add related topics
+          //
+          WWHAddRelatedTopic("Sample Search Results", "caLAB_1.0_OH", "Searching%20caLAB.3.6.html#1085437");
+          WWHAddRelatedTopic("Sample Details Page", "caLAB_1.0_OH", "Searching%20caLAB.3.7.html#1105521");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
