--- a/Submit to caLAB.4.30.html
+++ b/Submit to caLAB.4.30.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Cytotoxicity</title>
+    <title>Toxicity</title>
     <link rel="StyleSheet" href="css/Submit%20to%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,14 +28,13 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.1.html#1110125">Annotating Nanoparticles</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.7.html#1110125">Nanoparticle Characterization</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.27.html#1110125">In Vitro Characterization</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.29.html#1110125">Toxicity</a> &gt; Cytotoxicity</div>
+      <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.1.html#1117165">Annotating Nanoparticles</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.8.html#1117165">Nanoparticle Characterization</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.28.html#1117165">In Vitro Characterization</a> &gt; Toxicity</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading4"><a name="1110125">Cytotoxicity</a></div>
-      <div class="Body_Text"><a name="1110136">Cytotoxicity is a subcategory under the In Vitro characterization, </a><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.29.html#1117165', '');">Toxicity</a></span>. Cytotoxicity examines the cell destruction and/or death caused by nanoparticles. it can be dependent upon the nanoparticle itself, the agent and dosage it carries, the target cell type, etc.</div>
-      <div class="Body_Text"><a name="1114147">Once you click the </a><span style="font-weight: bold;">Add</span> link corresponding to <span style="font-weight: bold;">Cytotoxicity</span>, two menu bar options become available, <span style="font-weight: bold;">Cell Viabiltiy</span> and<span style="font-weight: bold;"> Caspase 3 Activity</span>. </div>
-      <div class="Body_Text"><a name="1110148">Click either of the tabs to open the corresponding form. For more information about </a>completing a form, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.28.html#1117156', '');">In Vitro Characterization Forms</a></span>.</div>
-      <div class="Body_Text"><a name="1110155">&nbsp;</a></div>
+      <div class="Heading3"><a name="1117165">Toxicity</a></div>
+      <div class="Body_Text"><a name="1109294">Toxicity refers to the potential of nanoparticles to be harmful to cell health or viabilty. </a>Because toxicity is ascertained under laboratory conditions, it is one of the in vitro characterizations in caLAB.</div>
+      <div class="Body_Text"><a name="1114148">Once you click the </a><span style="font-weight: bold;">Add</span> link corresponding to <span style="font-weight: bold;">Toxicity</span>, two menu bar options become available, <span style="font-weight: bold;">Oxidative Stress</span> and<span style="font-weight: bold;"> Enzyme Function</span>. On the Particle Tree, the Toxicity category also includes subcategories <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.31.html#1110125', '');">Cytotoxicity</a></span> and <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.32.html#1110131', '');">Immunotoxicity</a></span>, both of which have sub-categories.</div>
+      <div class="Body_Text"><a name="1110031">Click either of the tabs to open the corresponding form. For more information about </a>completing a form, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.29.html#1117156', '');">In Vitro Characterization Forms</a></span>.</div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
