--- a/Submit to caLAB.4.8.html
+++ b/Submit to caLAB.4.8.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <!-- saved from url=(0014)about:internet -->
-    <title>Physical Characterization</title>
+    <title>Nanoparticle Characterization</title>
     <link rel="StyleSheet" href="css/Submit%20to%20caLAB.css" type="text/css" media="all" />
     <link rel="StyleSheet" href="css/webworks.css" type="text/css" media="all" />
     <script type="text/javascript" language="JavaScript1.2" src="wwhdata/common/context.js"></script>
@@ -28,27 +28,23 @@
   <body style="" onLoad="WWHUpdate();" onUnload="WWHUnload();" onKeyDown="WWHHandleKeyDown((document.all||document.getElementById||document.layers)?event:null);" onKeyPress="WWHHandleKeyPress((document.all||document.getElementById||document.layers)?event:null);" onKeyUp="WWHHandleKeyUp((document.all||document.getElementById||document.layers)?event:null);">
     <br />
     <div class="WebWorks_Breadcrumbs" style="text-align: left;">
-      <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.1.html#1103338">Annotating Nanoparticles</a> &gt; <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.7.html#1103338">Nanoparticle Characterization</a> &gt; Physical Characterization</div>
+      <a class="WebWorks_Breadcrumb_Link" href="Submit%20to%20caLAB.4.1.html#1117746">Annotating Nanoparticles</a> &gt; Nanoparticle Characterization</div>
     <hr align="left" />
     <blockquote>
-      <div class="Heading2"><a name="1103338">Physical Characterization</a></div>
-      <div class="Body_Text"><a name="1103344">Physical characterization refers to the determination of the material and structural </a>properties of a nanoparticle. For an overview about nanoparticle characterization, see <span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.7.html#1117746', '');">Nanoparticle Characterization</a></span>.</div>
-      <div class="Body_Text"><a name="1108611">Click </a><span style="font-weight: bold;">Add</span> to the right of the Physical Characterization category on the Particle Tree. This opens a menu bar of a type with hypertext labels that you click to add corresponding information: </div>
-      <div class="Body_Text"><a name="1103708">The Physical Characterization subcategories on the page are links which you can click </a>to go to corresponding forms for annotating the selected particle.</div>
-      <div class="Body_Text"><a name="1108750">Click these hypertext links which take you to descriptions of the corresponding forms:</a></div>
-      <div class="Body_Text" style="margin-bottom: 5.0pt; margin-top: 1.0pt;"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.9.html#1103655', '');" name="1108751">Composition</a></span></div>
-      <div class="Body_Text" style="margin-bottom: 5.0pt; margin-top: 1.0pt;"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.20.html#1114794', '');" name="1108764">Nanoparticle Size</a></span></div>
-      <div class="Body_Text" style="margin-bottom: 5.0pt; margin-top: 1.0pt;"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.21.html#1107103', '');" name="1108794">Nanoparticle Molecular Weight</a></span></div>
-      <div class="Body_Text" style="margin-bottom: 5.0pt; margin-top: 1.0pt;"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.22.html#1107104', '');" name="1108825">Nanoparticle Morphology</a></span></div>
-      <div class="Body_Text" style="margin-bottom: 5.0pt; margin-top: 1.0pt;"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.23.html#1107101', '');" name="1108895">Nanoparticle Shape</a></span></div>
-      <div class="Body_Text" style="margin-bottom: 5.0pt; margin-top: 1.0pt;"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.24.html#1104870', '');" name="1108916">Nanoparticle Surface</a></span></div>
-      <div class="Body_Text" style="margin-bottom: 5.0pt; margin-top: 1.0pt;"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.25.html#1104929', '');" name="1108934">Nanoparticle Solubility</a></span></div>
-      <div class="Body_Text" style="margin-bottom: 5.0pt; margin-top: 1.0pt;"><span class="Emphasis" style="color: #515186;"><a href="javascript:WWHClickedPopup('caLAB_1.0_OH', 'Submit%20to%20caLAB.4.26.html#1104930', '');" name="1108952">Nanoparticle Purity</a></span></div>
+      <div class="Heading1"><a name="1117746">Nanoparticle Characterization</a></div>
+      <div class="Body_Text"><a name="1103334">Nanoparticle characterization, describing distinctive characteristics or essential </a>features of the nanoparticle, determined through analytical methods, is necessary to record information associated with nanoparticle synthesis and properties. </div>
+      <div class="Body_Text"><a name="1105216">Nanoparticles can be characterized in caLAB 1.0 by physical characteristics and by </a><span style="font-style: italic;">in </span><span style="font-style: italic;">vitro</span> characteristics.<span style="font-style: italic;"> In vivo</span> characterization is not implemented in v.1.0; it will come in a later version of caLAB. </div>
+      <div class="Body_Text"><a name="1117620">Each characterization category to which you can add annotations displays a hypertext </a><span style="font-weight: bold; text-decoration: underline;">Add</span> to its right on the Particle Tree. Click the <span style="font-weight: bold;">Add</span> link to open a set of tabs that can connect you to forms where you can add the details of laboratory results as corresponding annotation information.</div>
       <script type="text/javascript" language="JavaScript1.2">
         <!--
           // Clear related topics
           //
           WWHClearRelatedTopics();
+
+          // Add related topics
+          //
+          WWHAddRelatedTopic("Physical Characterization", "caLAB_1.0_OH", "Submit%20to%20caLAB.4.9.html#1103338");
+          WWHAddRelatedTopic("In Vitro Characterization", "caLAB_1.0_OH", "Submit%20to%20caLAB.4.28.html#1104932");
 
           document.writeln(WWHRelatedTopicsInlineHTML());
         // -->
